--- a/client/package.json
+++ b/client/package.json
@@ -11,17 +11,19 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "craco": "^0.0.3",
     "debug": "^4.3.7",
     "detect-port-alt": "^1.1.6",
     "framer-motion": "^11.11.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^4.1.2",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack-bundle-analyzer": "^4.10.2"
   },
-
   "scripts": {
     "start": "craco start",
     "build": "craco build",
