--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
   "scripts": {
     "start": "craco start",
     "build": "craco build",
+    "build:netlify": "CI=false npm run build",
     "test": "craco test",
     "eject": "react-scripts eject"
   },
