--- a/client/package.json
+++ b/client/package.json
@@ -36,7 +36,11 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "no-unused-vars": "off",
+      "jsx-a11y/role-supports-aria-props": "off"
+    }
   },
   "browserslist": {
     "production": [
@@ -51,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "react-app-rewired": "^2.2.1",
     "tailwindcss": "^3.4.13"
   }
